修复ios 中 overflow: auto 卡顿问题 fixed #138

--- a/src/drawer/less/drawer.less
+++ b/src/drawer/less/drawer.less
@@ -24,6 +24,7 @@ body.mdui-loaded .mdui-drawer {
   white-space: nowrap;
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   top: 0;
 
   // 手机端宽度为 100% - 56px，最大为 280px
