--- a/src/select/less/select.less
+++ b/src/select/less/select.less
@@ -124,6 +124,7 @@
 
   // 在计算宽度时，把滚动条计算进去
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 
   will-change: transform, opacity, visibility;
   transition-property: transform, opacity, visibility;
