--- a/src/table/less/table.less
+++ b/src/table/less/table.less
@@ -90,6 +90,7 @@ th.mdui-table-cell-checkbox {
 .mdui-table-fluid {
   width: 100%;
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
   border: 1px solid @color-black-divider;
   border-bottom: none;
   .mdui-shadow(2);
